--- a/rustshi/Anchor.toml
+++ b/rustshi/Anchor.toml
@@ -4,14 +4,14 @@
 seeds = false
 skip-lint = false
 
-[programs.devnet]
+[programs.localnet]
 rustshi = "CRjWCs644dmTa2BQjWW5AjvCkRpwmPtmF55CR6t4GmBG"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Devnet"
+cluster = "localnet"
 wallet = "/home/empiric-u3/.config/solana/id.json"
 
 [scripts]
